java/com/homesystemsconsulting/script/parser/SferaScriptGrammarParser.java
// Generated from SferaScriptGrammar.g4 by ANTLR 4.3
package com.homesystemsconsulting.script.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SferaScriptGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__1=1, T__0=2, Script=3, FinalNodeId=4, BooleanLiteral=5, Unknown=6, 
		NodeId=7, NumberLiteral=8, StringLiteral=9, LPAREN=10, RPAREN=11, DOT=12, 
		ET=13, NE=14, GT=15, LT=16, GE=17, LE=18, OR=19, AND=20, NOT=21, COLON=22, 
		WS=23, COMMENT=24, LINE_COMMENT=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'local'", "'global'", "Script", "FinalNodeId", "BooleanLiteral", 
		"'unknown'", "NodeId", "NumberLiteral", "StringLiteral", "'('", "')'", 
		"'.'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'||'", "'&&'", "'!'", 
		"':'", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_parse = 0, RULE_init = 1, RULE_localScopeInit = 2, RULE_globalScopeInit = 3, 
		RULE_rules = 4, RULE_ruleLine = 5, RULE_action = 6, RULE_trigger = 7, 
		RULE_orExpression = 8, RULE_andExpression = 9, RULE_notExpression = 10, 
		RULE_atomExpression = 11, RULE_event = 12, RULE_stableEvent = 13, RULE_stringComparison = 14, 
		RULE_numberComparison = 15, RULE_booleanComparison = 16, RULE_unknownComparison = 17, 
		RULE_transientEvent = 18;
	public static final String[] ruleNames = {
		"parse", "init", "localScopeInit", "globalScopeInit", "rules", "ruleLine", 
		"action", "trigger", "orExpression", "andExpression", "notExpression", 
		"atomExpression", "event", "stableEvent", "stringComparison", "numberComparison", 
		"booleanComparison", "unknownComparison", "transientEvent"
	};

	@Override
	public String getGrammarFileName() { return "SferaScriptGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SferaScriptGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SferaScriptGrammarParser.EOF, 0); }
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); init();
			setState(40);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FinalNodeId) | (1L << NodeId) | (1L << LPAREN) | (1L << NOT))) != 0)) {
				{
				setState(39); rules();
				}
			}

			setState(42); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public LocalScopeInitContext localScopeInit() {
			return getRuleContext(LocalScopeInitContext.class,0);
		}
		public GlobalScopeInitContext globalScopeInit() {
			return getRuleContext(GlobalScopeInitContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_init);
		int _la;
		try {
			setState(56);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				_la = _input.LA(1);
				if (_la==T__1 || _la==Script) {
					{
					setState(44); localScopeInit();
					}
				}

				setState(48);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(47); globalScopeInit();
					}
				}

				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(50); globalScopeInit();
					}
				}

				setState(54);
				_la = _input.LA(1);
				if (_la==T__1 || _la==Script) {
					{
					setState(53); localScopeInit();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalScopeInitContext extends ParserRuleContext {
		public TerminalNode Script() { return getToken(SferaScriptGrammarParser.Script, 0); }
		public LocalScopeInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localScopeInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterLocalScopeInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitLocalScopeInit(this);
		}
	}

	public final LocalScopeInitContext localScopeInit() throws RecognitionException {
		LocalScopeInitContext _localctx = new LocalScopeInitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_localScopeInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(58); match(T__1);
				}
			}

			setState(61); match(Script);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalScopeInitContext extends ParserRuleContext {
		public TerminalNode Script() { return getToken(SferaScriptGrammarParser.Script, 0); }
		public GlobalScopeInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalScopeInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterGlobalScopeInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitGlobalScopeInit(this);
		}
	}

	public final GlobalScopeInitContext globalScopeInit() throws RecognitionException {
		GlobalScopeInitContext _localctx = new GlobalScopeInitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globalScopeInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(T__0);
			setState(64); match(Script);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public RuleLineContext ruleLine(int i) {
			return getRuleContext(RuleLineContext.class,i);
		}
		public List<RuleLineContext> ruleLine() {
			return getRuleContexts(RuleLineContext.class);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitRules(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66); ruleLine();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FinalNodeId) | (1L << NodeId) | (1L << LPAREN) | (1L << NOT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleLineContext extends ParserRuleContext {
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class,0);
		}
		public TerminalNode COLON() { return getToken(SferaScriptGrammarParser.COLON, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public RuleLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterRuleLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitRuleLine(this);
		}
	}

	public final RuleLineContext ruleLine() throws RecognitionException {
		RuleLineContext _localctx = new RuleLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); trigger();
			setState(72); match(COLON);
			setState(73); action();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode Script() { return getToken(SferaScriptGrammarParser.Script, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(Script);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerContext extends ParserRuleContext {
		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class,0);
		}
		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterTrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitTrigger(this);
		}
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trigger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); orExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrExpressionContext extends ParserRuleContext {
		public List<AndExpressionContext> andExpression() {
			return getRuleContexts(AndExpressionContext.class);
		}
		public AndExpressionContext andExpression(int i) {
			return getRuleContext(AndExpressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(SferaScriptGrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(SferaScriptGrammarParser.OR, i);
		}
		public OrExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterOrExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitOrExpression(this);
		}
	}

	public final OrExpressionContext orExpression() throws RecognitionException {
		OrExpressionContext _localctx = new OrExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_orExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); andExpression();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(80); match(OR);
				setState(81); andExpression();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExpressionContext extends ParserRuleContext {
		public TerminalNode AND(int i) {
			return getToken(SferaScriptGrammarParser.AND, i);
		}
		public List<NotExpressionContext> notExpression() {
			return getRuleContexts(NotExpressionContext.class);
		}
		public List<TerminalNode> AND() { return getTokens(SferaScriptGrammarParser.AND); }
		public NotExpressionContext notExpression(int i) {
			return getRuleContext(NotExpressionContext.class,i);
		}
		public AndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitAndExpression(this);
		}
	}

	public final AndExpressionContext andExpression() throws RecognitionException {
		AndExpressionContext _localctx = new AndExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_andExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); notExpression();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(88); match(AND);
				setState(89); notExpression();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotExpressionContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(SferaScriptGrammarParser.NOT, 0); }
		public AtomExpressionContext atomExpression() {
			return getRuleContext(AtomExpressionContext.class,0);
		}
		public NotExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterNotExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitNotExpression(this);
		}
	}

	public final NotExpressionContext notExpression() throws RecognitionException {
		NotExpressionContext _localctx = new NotExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_notExpression);
		try {
			setState(98);
			switch (_input.LA(1)) {
			case NOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(95); match(NOT);
				setState(96); atomExpression();
				}
				break;
			case FinalNodeId:
			case NodeId:
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(97); atomExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomExpressionContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(SferaScriptGrammarParser.LPAREN, 0); }
		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SferaScriptGrammarParser.RPAREN, 0); }
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public AtomExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterAtomExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitAtomExpression(this);
		}
	}

	public final AtomExpressionContext atomExpression() throws RecognitionException {
		AtomExpressionContext _localctx = new AtomExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_atomExpression);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case FinalNodeId:
			case NodeId:
				enterOuterAlt(_localctx, 1);
				{
				setState(100); event();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); match(LPAREN);
				setState(102); orExpression();
				setState(103); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public TransientEventContext transientEvent() {
			return getRuleContext(TransientEventContext.class,0);
		}
		public StableEventContext stableEvent() {
			return getRuleContext(StableEventContext.class,0);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitEvent(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_event);
		try {
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); stableEvent();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); transientEvent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StableEventContext extends ParserRuleContext {
		public UnknownComparisonContext unknownComparison() {
			return getRuleContext(UnknownComparisonContext.class,0);
		}
		public StringComparisonContext stringComparison() {
			return getRuleContext(StringComparisonContext.class,0);
		}
		public BooleanComparisonContext booleanComparison() {
			return getRuleContext(BooleanComparisonContext.class,0);
		}
		public NumberComparisonContext numberComparison() {
			return getRuleContext(NumberComparisonContext.class,0);
		}
		public StableEventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stableEvent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterStableEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitStableEvent(this);
		}
	}

	public final StableEventContext stableEvent() throws RecognitionException {
		StableEventContext _localctx = new StableEventContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stableEvent);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111); stringComparison();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112); numberComparison();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113); booleanComparison();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114); unknownComparison();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringComparisonContext extends ParserRuleContext {
		public TerminalNode ET() { return getToken(SferaScriptGrammarParser.ET, 0); }
		public TerminalNode GE() { return getToken(SferaScriptGrammarParser.GE, 0); }
		public TerminalNode FinalNodeId() { return getToken(SferaScriptGrammarParser.FinalNodeId, 0); }
		public TerminalNode StringLiteral() { return getToken(SferaScriptGrammarParser.StringLiteral, 0); }
		public TerminalNode LT() { return getToken(SferaScriptGrammarParser.LT, 0); }
		public TerminalNode GT() { return getToken(SferaScriptGrammarParser.GT, 0); }
		public TerminalNode LE() { return getToken(SferaScriptGrammarParser.LE, 0); }
		public TerminalNode NE() { return getToken(SferaScriptGrammarParser.NE, 0); }
		public StringComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterStringComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitStringComparison(this);
		}
	}

	public final StringComparisonContext stringComparison() throws RecognitionException {
		StringComparisonContext _localctx = new StringComparisonContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_stringComparison);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(FinalNodeId);
			setState(118);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ET) | (1L << NE) | (1L << GT) | (1L << LT) | (1L << GE) | (1L << LE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(119); match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberComparisonContext extends ParserRuleContext {
		public TerminalNode ET() { return getToken(SferaScriptGrammarParser.ET, 0); }
		public TerminalNode GE() { return getToken(SferaScriptGrammarParser.GE, 0); }
		public TerminalNode FinalNodeId() { return getToken(SferaScriptGrammarParser.FinalNodeId, 0); }
		public TerminalNode NumberLiteral() { return getToken(SferaScriptGrammarParser.NumberLiteral, 0); }
		public TerminalNode LT() { return getToken(SferaScriptGrammarParser.LT, 0); }
		public TerminalNode GT() { return getToken(SferaScriptGrammarParser.GT, 0); }
		public TerminalNode LE() { return getToken(SferaScriptGrammarParser.LE, 0); }
		public TerminalNode NE() { return getToken(SferaScriptGrammarParser.NE, 0); }
		public NumberComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).enterNumberComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SferaScriptGrammarListener ) ((SferaScriptGrammarListener)listener).exitNumberComparison(this);
		}
	}

	public final NumberComparisonContext numberComparison() throws RecognitionException {
		NumberComparisonContext _localctx = new NumberComparisonContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_numberComparison);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(FinalNodeId);
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ET) | (1L << NE) | (1L << GT) | (1L << LT) | (1L << GE) | (1L << LE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(123); match(NumberLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
